--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Agro - organic food</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:100,400,700,900&display=swap&subset=cyrillic"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:100,400,700,900&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -76,7 +75,11 @@
         <section class="slogan">
             <div class="wrapper">
                 <div class="slogan-inner">
-                    <img src="img/slogan-text.svg">
+                    <div class="slogan-content">
+                        <h2 class="slogan-text"><span class="light-yellow">Quality</span>
+                             <span class="violet">food<br> is the</span> most important 
+                            <span class="yellow"> thing in our</span><span class="blue"> life</span> </h2>
+                    </div>
                 </div>
             </div>
         </section>
@@ -84,7 +87,7 @@
         <section class="services">
             <div class="wrapper">
                 <div class="services-inner">
-                    <h3 class="title"><span class="strong">Agro</span> food Services</h3>
+                    <h3 class="title"><span class="strong">Agro food</span> Services</h3>
                     <h4 class="subtitle">Latin words, combined with a handful of model sentence structures, to generate
                         Lorem Ipsum which looks reasonable.</h4>
                     <ul class="service-list">
