--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Agro - organic food</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:100,400,700,900&display=swap&subset=cyrillic" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:100,400,700,900&display=swap&subset=cyrillic"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -77,7 +79,7 @@
                 <div class="slogan-inner">
                     <div class="slogan-content">
                         <h2 class="slogan-text"><span class="light-yellow">Quality</span>
-                             <span class="violet">food<br> is the</span> most important 
+                            <span class="violet">food<br> is the</span> most important
                             <span class="yellow"> thing in our</span><span class="blue"> life</span> </h2>
                     </div>
                 </div>
@@ -87,9 +89,12 @@
         <section class="services">
             <div class="wrapper">
                 <div class="services-inner">
-                    <h3 class="title"><span class="strong">Agro food</span> Services</h3>
-                    <h4 class="subtitle">Latin words, combined with a handful of model sentence structures, to generate
-                        Lorem Ipsum which looks reasonable.</h4>
+                    <div class="service-header">
+                        <h3 class="title"><span class="strong">Agro food</span> Services</h3>
+                        <h4 class="subtitle">Latin words, combined with a handful of model sentence structures, to
+                            generate
+                            Lorem Ipsum which looks reasonable.</h4>
+                    </div>
                     <ul class="service-list">
                         <li class="service-item">Steak house</li>
                         <li class="service-item">Tasty cereals</li>
