END BLOCK FEATURES

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                             Lorem Ipsum which looks reasonable.</h4>
                     </div>
                     <ul class="service-list">
-                        <li class="service-item">Steak house</li>
-                        <li class="service-item">Tasty cereals</li>
-                        <li class="service-item">Italian Pizza</li>
-                        <li class="service-item">Vegeterian Burgers</li>
-                        <li class="service-item">Awesome Cupcake</li>
-                        <li class="service-item">Vegetables</li>
+                        <li class="service-one">Steak house</li>
+                        <li class="service-two">Tasty cereals</li>
+                        <li class="service-three">Italian Pizza</li>
+                        <li class="service-four">Vegeterian Burgers</li>
+                        <li class="service-five">Awesome Cupcake</li>
+                        <li class="service-six">Vegetables</li>
                     </ul>
                 </div>
             </div>
@@ -110,45 +110,55 @@
         <section class="features">
             <div class="wrapper">
                 <div class="features-inner">
-                    <h3 class="title"><span class="strong">Agro perfect</span> food for you</h3>
-                    <p class="text">Latin words, combined with a handful of model sentence structures, to generate
-                        Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from
-                        repetition injected humour, or non-characteristic words etc. Contrary to popular belief,
-                        Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
-                        from 45 BC, making it over 2000 years old.</p>
-                    <a class="feature-link" href="">Discover</a>
-
+                    <div class="feature-content">
+                        <div class="feature-header">
+                            <h3 class="title title-white"><span class="strong">Agro perfect</span> food for you</h3>
+                        </div>
+                        <p class="text">Latin words, combined with a handful of model sentence structures, to
+                            generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
+                            free fromrepetition injected humour, or non-characteristic words etc. Contrary to popular
+                            belief,
+                            Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+                            from 45 BC, making it over 2000 years old.</p>
+                        <a class="feature-link" href="">Discover</a>
+                    </div>
                     <ul class="features-list">
-                        <li></li>
-                        <li class="feature-text">
-                            <h4 class="subtitle">Health Benefits of a Raw Food</h4>
-                            <p class="text">Dogfish shark, bango hog sucker, baikal
-                                oilfish, eeltail catfish regal whiptail catfish; squarehead catfish electric ray.</p>
+                        <li class="feature-item">
+                            <div class="feature-img feature-img-one"></div>
+                            <div class="feature-text">
+                                <h4 class="subtitle subtitle-black">Health Benefits<br> of a Raw Food</h4>
+                                <p class="text text-black">Dogfish shark, bango hog sucker, baikal
+                                    oilfish, eeltail catfish regal whiptail catfish; squarehead cat
+                                </p>
+                            </div>
                         </li>
 
-                        <li></li>
-                        <li class="feature-text">
-                            <h4 class="subtitle">Tips for Ripening your Fruit</h4>
-                            <p class="text">The generated Lorem Ipsum is therefore always free from repetition injected
-                                humour,
-                                or non-characteristic words etc. Susp endisse ultricies nisi vel quam suscipit</p>
+                        <li class="feature-item">
+                            <div class="feature-img feature-img-two"></div>
+                            <div class="feature-text">
+                                <h4 class="subtitle subtitle-black">Tips for Ripening<br> your Fruit</h4>
+                                <p class="text text-black">The generated Lorem Ipsum is therefore always free from
+                                    repetition injected humour, or</p>
+                            </div>
                         </li>
 
-
-                        <li class="feature-text">
-                            <h4 class="subtitle">Superfoods you should be eating</h4>
-                            <p class="text">The generated Lorem Ipsum is therefore always free from repetition injected
-                                humour,
-                                or non-characteristic words etc. Susp endisse ultricies nisi vel quam suscipit</p>
+                        <li class="feature-item">
+                            <div class="feature-text">
+                                <h4 class="subtitle subtitle-black">Superfoods you should<br> be eating</h4>
+                                <p class="text text-black">The generated Lorem Ipsum is therefore always free from 
+                                    repetition injected humour, or </p>
+                            </div>
+                            <div class="feature-img feature-img-three"></div>
                         </li>
-                        <li></li>
 
-
-                        <li class="feature-text">
-                            <h4 class="subtitle">Grunt torrent catfish squaretail Norwegian Atlantic salmon</h4>
-                            <p class="text">Northern clingfish searobin betta asuckermouth armored catfish.</p>
+                        <li class="feature-item">
+                            <div class="feature-text">
+                                <h4 class="subtitle subtitle-black">Grunt torrent catfish<br> squaretail Norwegian<br>
+                                    Atlantic salmon</h4>
+                                <p class="text text-black">Northern clingfish searobin betta blue shark. Jackfish leopard danio.</p>
+                            </div>
+                            <div class="feature-img feature-img-four"></div>
                         </li>
-                        <li></li>
                     </ul>
                 </div>
             </div>
