--- a/index.html
+++ b/index.html
@@ -122,10 +122,17 @@
                             from 45 BC, making it over 2000 years old.</p>
                         <a class="feature-link" href="">Discover</a>
                     </div>
-                    <ul class="features-list">
-                        <li class="feature-item">
-                            <div class="feature-img feature-img-one"></div>
-                            <div class="feature-text">
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="wrapper">
+                <div class="about-inner">
+                    <ul class="about-list">
+                        <li class="about-item">
+                            <div class="about-img about-img-one"></div>
+                            <div class="about-text">
                                 <h4 class="subtitle subtitle-black">Health Benefits<br> of a Raw Food</h4>
                                 <p class="text text-black">Dogfish shark, bango hog sucker, baikal
                                     oilfish, eeltail catfish regal whiptail catfish; squarehead cat
@@ -133,31 +140,32 @@
                             </div>
                         </li>
 
-                        <li class="feature-item">
-                            <div class="feature-img feature-img-two"></div>
-                            <div class="feature-text">
+                        <li class="about-item">
+                            <div class="about-img about-img-two"></div>
+                            <div class="about-text">
                                 <h4 class="subtitle subtitle-black">Tips for Ripening<br> your Fruit</h4>
                                 <p class="text text-black">The generated Lorem Ipsum is therefore always free from
                                     repetition injected humour, or</p>
                             </div>
                         </li>
 
-                        <li class="feature-item">
-                            <div class="feature-text">
+                        <li class="about-item">
+                            <div class="about-text">
                                 <h4 class="subtitle subtitle-black">Superfoods you should<br> be eating</h4>
-                                <p class="text text-black">The generated Lorem Ipsum is therefore always free from 
+                                <p class="text text-black">The generated Lorem Ipsum is therefore always free from
                                     repetition injected humour, or </p>
                             </div>
-                            <div class="feature-img feature-img-three"></div>
+                            <div class="about-img about-img-three"></div>
                         </li>
 
-                        <li class="feature-item">
-                            <div class="feature-text">
+                        <li class="about-item">
+                            <div class="about-text">
                                 <h4 class="subtitle subtitle-black">Grunt torrent catfish<br> squaretail Norwegian<br>
                                     Atlantic salmon</h4>
-                                <p class="text text-black">Northern clingfish searobin betta blue shark. Jackfish leopard danio.</p>
+                                <p class="text text-black">Northern clingfish searobin betta blue shark. Jackfish
+                                    leopard danio.</p>
                             </div>
-                            <div class="feature-img feature-img-four"></div>
+                            <div class="about-img about-img-four"></div>
                         </li>
                     </ul>
                 </div>
@@ -166,7 +174,7 @@
 
         <section class="banner">
             <div class="wrapper">
-                <h2 class="main-title">Tasty Cakes</h2>
+                <h2 class="main-title main-title-yellow">Tasty Cakes</h2>
             </div>
         </section>
 
