--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
 
         <section class="banner">
             <div class="wrapper">
-                <h2 class="main-title main-title-yellow">Tasty Cakes</h2>
+                <div class="banner-inner">
+                    <h2 class="main-title main-title-yellow">Tasty<br> Cakes</h2>
+                </div>
             </div>
         </section>
 
