--- a/index.html
+++ b/index.html
@@ -183,25 +183,47 @@
         <section class="progress">
             <div class="wrapper">
                 <div class="progress-inner">
-                    <h3 class="title"><span class="strong">Agro</span> progress</h3>
-                    <h4 class="subtitle">Latin words, combined with a handful of model sentence structures,
-                        to generate Lorem Ipsum which looks reasonable.</h4>
+                    <div class="progress-header">
+                        <h3 class="title"><span class="strong">Agro</span> progress</h3>
+                        <h4 class="subtitle">Latin words, combined with a handful of model sentence structures,
+                            to generate Lorem Ipsum which looks reasonable.</h4>
+                    </div>
                     <ul class="progress-list">
-                        <li>
-                            <p class="count">350</p>
-                            <p class="product">Muffins</p>
+                        <li class="progress-item">
+                            <div class="progress-img progress-img-one">
+                               <img src="img/muffin.png">
+                            </div>
+                            <div class="progress-text">
+                                <p class="count">350</p>
+                                <p class="product">Muffins</p>
+                            </div>
                         </li>
-                        <li>
-                            <p class="count">158</p>
-                            <p class="product">Cakes</p>
+                        <li class="progress-item">
+                            <div class="progress-img progress-img-two">
+                                <img src="img/cake.png">                              
+                            </div>
+                            <div class="progress-text">
+                                <p class="count">158</p>
+                                <p class="product">Cakes</p>
+                            </div>
                         </li>
-                        <li>
-                            <p class="count">500+</p>
-                            <p class="product">Cupcakes</p>
+                        <li class="progress-item">
+                            <div class="progress-img progress-img-three">
+                                <img src="img/cupcake-2.png">
+                            </div>
+                            <div class="progress-text">
+                                <p class="count">500+</p>
+                                <p class="product">Cupcakes</p>
+                            </div>
                         </li>
-                        <li>
-                            <p class="count">685</p>
-                            <p class="product">Doughnut</p>
+                        <li class="progress-item">
+                            <div class="progress-img progress-img-four">
+                                <img src="img/daughnut.png">                               
+                            </div>
+                            <div class="progress-text">
+                                <p class="count">685</p>
+                                <p class="product">Doughnut</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
