--- a/index.html
+++ b/index.html
@@ -232,37 +232,53 @@
 
         <section class="pic-product">
             <ul class="pic-list">
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-1.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-2.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-3.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-4.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-5.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-6.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-7.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <div class="pic-text">Tasty jam</div>
+                <li class="pic-item">
+                    <img src="img/pic-8.jpg" alt="">
+                    <div class="pic-text">
+                        <p>Testy jam</p>
+                    </div>
                 </li>
             </ul>
         </section>
