--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <ul class="progress-list">
                         <li class="progress-item">
                             <div class="progress-img progress-img-one">
-                               <img src="img/muffin.png">
+                                <img src="img/muffin.png">
                             </div>
                             <div class="progress-text">
                                 <p class="count">350</p>
@@ -200,7 +200,7 @@
                         </li>
                         <li class="progress-item">
                             <div class="progress-img progress-img-two">
-                                <img src="img/cake.png">                              
+                                <img src="img/cake.png">
                             </div>
                             <div class="progress-text">
                                 <p class="count">158</p>
@@ -218,7 +218,7 @@
                         </li>
                         <li class="progress-item">
                             <div class="progress-img progress-img-four">
-                                <img src="img/daughnut.png">                               
+                                <img src="img/daughnut.png">
                             </div>
                             <div class="progress-text">
                                 <p class="count">685</p>
@@ -286,9 +286,11 @@
         <section class="review">
             <div class="wrapper">
                 <div class="review-inner">
-                    <h3 class="title"><span class="strong">People says</span> about agro</h3>
-                    <h4 class="subtitle">Latin words, combined with a handful of model sentence structures,
-                        to generate Lorem Ipsum which looks reasonable.</h4>
+                    <div class="review-header">
+                        <h3 class="title title-white"><span class="strong">People says</span> about agro</h3>
+                        <h4 class="subtitle subtitle-white">Latin words, combined with a handful of model sentence structures,
+                            to generate Lorem Ipsum which looks reasonable.</h4>
+                    </div>
                     <div class="review-content">
                         <div class="review-text">
                             <p>Latin words, combined with a handful of model sentence structures, to generate
@@ -298,7 +300,7 @@
                                 classical Latin literature from 45 BC, making it over.</p>
                         </div>
                         <div class="review-author">
-                            <img src="" alt="" width="" height="">
+                            <img src="img/avatar.png" alt="" width="" height="">
                             <p class="review-name">Terens Smith/</p>
                             <p class="review-prof">CEO AntalAgro</p>
                         </div>
