--- a/index.html
+++ b/index.html
@@ -288,16 +288,23 @@
                 <div class="review-inner">
                     <div class="review-header">
                         <h3 class="title title-white"><span class="strong">People says</span> about agro</h3>
-                        <h4 class="subtitle subtitle-white">Latin words, combined with a handful of model sentence structures,
+                        <h4 class="subtitle subtitle-white">Latin words, combined with a handful of model sentence
+                            structures,
                             to generate Lorem Ipsum which looks reasonable.</h4>
                     </div>
                     <div class="review-content">
                         <div class="review-text">
-                            <p>Latin words, combined with a handful of model sentence structures, to generate
-                                Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
-                                free from repetition injected humour, or non-characteristic words etc. Contrary to
-                                popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                                classical Latin literature from 45 BC, making it over.</p>
+                            <p>Latin words, combined with a handful of model sentence
+                                structures, to generate Lorem Ipsum which looks reasonable.
+                                The generated Lorem Ipsum is therefore always free from
+                                repetition injected humour, or non-characteristic words etc.
+                                Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                It has roots in a piece of classical Latin literature from 45 BC,
+                                making it over 2000 years old. Richard McClintock, a Latin professor
+                                at Hampden-Sydney College in Virginia, looked up one of the more
+                                obscure Latin words, consectetur, from a Lorem Ipsum passage,
+                                and going through the cites of the word in classical literature,
+                                discovered</p>
                         </div>
                         <div class="review-author">
                             <img src="img/avatar.png" alt="" width="" height="">
@@ -312,12 +319,14 @@
         <section class="blog">
             <div class="wrapper">
                 <div class="blog-inner">
-                    <h3 class="title"><span class="strong">Blog</span> posts</h3>
-                    <h4 class="subtitle">Latin words, combined with a handful of model sentence structures,
-                        to generate Lorem Ipsum which looks reasonable.</h4>
+                    <div class="blog-header">
+                        <h3 class="title"><span class="strong">Blog</span> posts</h3>
+                        <h4 class="subtitle">Latin words, combined with a handful of model sentence structures,
+                            to generate Lorem Ipsum which looks reasonable.</h4>
+                    </div>
                     <ul class="blog-posts">
                         <li class="blog-post blog-post-one">
-                            <img src="" alt="" width="" height="">
+                            <img src="img/blog-1.png" alt="">
                             <div class="blog-content">
                                 <div class="blog-date">
                                     <p class="date-number">07</p>
@@ -331,7 +340,7 @@
                         </li>
 
                         <li class="blog-post blog-post-one">
-                            <img src="" alt="" width="" height="">
+                            <img src="img/blog-2.png" alt="">
                             <div class="blog-content">
                                 <div class="blog-date">
                                     <p class="date-number">03</p>
@@ -345,7 +354,7 @@
                         </li>
 
                         <li class="blog-post blog-post-one">
-                            <img src="" alt="" width="" height="">
+                            <img src="img/blog-3.png" alt="">
                             <div class="blog-content">
                                 <div class="blog-date">
                                     <p class="date-number">25</p>
