--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             to generate Lorem Ipsum which looks reasonable.</h4>
                     </div>
                     <ul class="blog-posts">
-                        <li class="blog-post blog-post-one">
+                        <li class="blog-post">
                             <img src="img/blog-1.png" alt="">
                             <div class="blog-content">
                                 <div class="blog-date">
@@ -339,7 +339,7 @@
                             </div>
                         </li>
 
-                        <li class="blog-post blog-post-one">
+                        <li class="blog-post">
                             <img src="img/blog-2.png" alt="">
                             <div class="blog-content">
                                 <div class="blog-date">
@@ -353,7 +353,7 @@
                             </div>
                         </li>
 
-                        <li class="blog-post blog-post-one">
+                        <li class="blog-post">
                             <img src="img/blog-3.png" alt="">
                             <div class="blog-content">
                                 <div class="blog-date">
@@ -377,27 +377,27 @@
                     <ul class="partners-list">
                         <li class="partner-item">
                             <a class="partner-link" href="">
-                                <img class="partner-logo" src="" alt="" width="" height="">
+                                <img class="partner-logo" src="img/partner1.png" alt="" width="207" height="164">
                             </a>
                         </li>
                         <li class="partner-item">
                             <a class="partner-link" href="">
-                                <img class="partner-logo" src="" alt="" width="" height="">
+                                <img class="partner-logo" src="img/partner2.png" alt="" width="90" height="123">
                             </a>
                         </li>
                         <li class="partner-item">
                             <a class="partner-link" href="">
-                                <img class="partner-logo" src="" alt="" width="" height="">
+                                <img class="partner-logo" src="img/partner3.png" alt="" width="242" height="83">
                             </a>
                         </li>
                         <li class="partner-item">
                             <a class="partner-link" href="">
-                                <img class="partner-logo" src="" alt="" width="" height="">
+                                <img class="partner-logo" src="img/partner4.png" alt="" width="132" height="128">
                             </a>
                         </li>
                         <li class="partner-item">
                             <a class="partner-link" href="">
-                                <img class="partner-logo" src="" alt="" width="" height="">
+                                <img class="partner-logo" src="img/partner5.png" alt="" width="119" height="120">
                             </a>
                         </li>
                     </ul>
