--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <div class="wrapper">
             <div class="footer-inner">
                 <div class="footer-info">
-                    <img src="" alt="" class="footer-logo" width="" height="">
+                    <img src="img/logo.png" alt="" class="footer-logo" width="100" height="130">
                     <ul class="footer-menu">
                         <li><a href="" aria-label="">Home</a></li>
                         <li><a href="" aria-label="">About</a></li>
@@ -436,24 +436,50 @@
                     <div class="phone">
                         <p>Phone:</p>
                         <p class="phone-link">
-                            <a href="tel:+123456789">+1 (234) 56789</a>
-                            <a href="tel:+19876543210">+1 987 654 3210</a>
+                            <a href="tel:+123456789" class="phone-one">+1 (234) 56789,</a>
+                            <a href="tel:+19876543210" class="phone-two">+1 987 654 3210</a>
                         </p>
                     </div>
                     <ul class="social-list">
-                        <li><a href="" class="social-icon" aria-label="Twitter"></a></li>
-                        <li><a href="" class="social-icon" aria-label="Facebook"></a></li>
-                        <li><a href="" class="social-icon" aria-label=""></a></li>
+                        <li class="social-item">
+                            <a href="" class="social-icon" aria-label="Twitter">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="23.156" height="15.75"
+                                    viewBox="0 0 23.156 15.75">
+                                    <path fill="#535353" fill-rule="evenodd"
+                                        d="M828.521,8078.66a0.147,0.147,0,0,1-.044-0.04,4.23,4.23,0,0,0-3.053-1.06l-0.036-.08a0.021,0.021,0,0,1,.021-0.01,3.8,3.8,0,0,0,1.877-.71,0.234,0.234,0,0,0-.246-0.34,5.892,5.892,0,0,0-1.465.33c0.556-.33.773-0.57,0.65-0.69a3.027,3.027,0,0,0-1.762.79,0.864,0.864,0,0,0,.261-0.6,5.387,5.387,0,0,0-.78.61,11.821,11.821,0,0,0-1.133,1.35l-0.015.04a11.433,11.433,0,0,0-1.573,3.39l-0.116.08-0.021.02a5.935,5.935,0,0,0-1.624-1.31,20.376,20.376,0,0,0-2.671-1.31,23.728,23.728,0,0,0-3.4-1.33,3.137,3.137,0,0,0,1.87,2.83v0.03a4.2,4.2,0,0,0-1.278.17c0.079,1.11.924,1.87,2.526,2.29l-0.007.02a1.9,1.9,0,0,0-1.552.59,2.814,2.814,0,0,0,2.808,1.38,2.044,2.044,0,0,0-.613.42,0.837,0.837,0,0,0-.246.85,1.579,1.579,0,0,0,1.574.67h0l0.043,0.05a0.037,0.037,0,0,1-.022.02,6.051,6.051,0,0,1-4.786,1.72l-0.028.02a6.3,6.3,0,0,1-3.681-1.53,11.279,11.279,0,0,0,5.269,3.85,13.339,13.339,0,0,0,7.485.17H822.8a11.889,11.889,0,0,0,6.157-3.99,7.763,7.763,0,0,0,1.466-3.02,3.122,3.122,0,0,0,2.735-1.02l-0.014-.02a5.876,5.876,0,0,1-2.462-.13v-0.13h0.008c1.335-.14,2.122-0.54,2.375-1.2a4.025,4.025,0,0,1-2.758.03A5.393,5.393,0,0,0,828.521,8078.66Z"
+                                        transform="translate(-810 -8076.06)" />
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-icon" aria-label="Facebook">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="7.906" height="16.56"
+                                    viewBox="0 0 7.906 16.56">
+                                    <path fill="#535353" fill-rule="evenodd"
+                                        d="M850.52,8080.38h-2.687v-1.72a0.709,0.709,0,0,1,.747-0.8h1.9v-2.84l-2.612-.01a3.264,3.264,0,0,0-3.559,3.48v1.89h-1.677v2.92h1.677v8.28h3.527v-8.28h2.379Z"
+                                        transform="translate(-842.625 -8075)" />
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-icon" aria-label="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="17.031" height="16.72"
+                                    viewBox="0 0 17.031 16.72">
+                                    <path fill="#535353" fill-rule="evenodd"
+                                        d="M875.135,8082.82v-0.03c0,0.01-.012.02-0.017,0.03h0.017Zm6.616-7.54H867.232a1.225,1.225,0,0,0-1.258,1.2v14.32a1.232,1.232,0,0,0,1.258,1.2h14.519a1.233,1.233,0,0,0,1.26-1.2v-14.32A1.226,1.226,0,0,0,881.751,8075.28Zm-10.613,13.99h-2.574v-7.55h2.574v7.55Zm-1.287-8.58h-0.017a1.317,1.317,0,0,1-1.422-1.3A1.456,1.456,0,1,1,869.851,8080.69Zm10.566,8.58h-2.574v-4.04c0-1.01-.372-1.7-1.3-1.7a1.394,1.394,0,0,0-1.32.92,1.648,1.648,0,0,0-.085.61v4.21h-2.573s0.033-6.84,0-7.55h2.573v1.07a2.572,2.572,0,0,1,2.32-1.24c1.692,0,2.962,1.08,2.962,3.4v4.32Z"
+                                        transform="translate(-865.969 -8075.28)" />
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer-copyright">
-                    <img src="" alt="" width="" height="">
+                    <p>© 2017, AgroTheme by Artureanec | Privacy Policy | Sitemap</p>
+                    <p>All Rights Reserved.</p>
                 </div>
             </div>
         </div>
-        <div class="map">
-
-        </div>
+            <img class="map" src="img/map.jpg" alt="" width="615" height="503">
     </footer>
 </body>
 
