change block product

--- a/index.html
+++ b/index.html
@@ -232,50 +232,42 @@
 
         <section class="pic-product">
             <ul class="pic-list">
-                <li class="pic-item">
-                    <img src="img/pic-1.jpg" alt="">
+                <li class="pic-item pic-item-one">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-2.jpg" alt="">
+                <li class="pic-item pic-item-two">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-3.jpg" alt="">
+                <li class="pic-item pic-item-three">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-4.jpg" alt="">
+                <li class="pic-item pic-item-four">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-5.jpg" alt="">
+                <li class="pic-item pic-item-five">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-6.jpg" alt="">
+                <li class="pic-item pic-item-six">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-7.jpg" alt="">
+                <li class="pic-item pic-item-seven">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
                 </li>
-                <li class="pic-item">
-                    <img src="img/pic-8.jpg" alt="">
+                <li class="pic-item pic-item-eight">
                     <div class="pic-text">
                         <p>Testy jam</p>
                     </div>
