--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
             </div>
         </div>
             <img class="map" src="img/map.jpg" alt="" width="615" height="503">
+            <img class="marker" src="img/marker.png" width="" height="">
     </footer>
 </body>
 
